--- a/epuck_config.json
+++ b/epuck_config.json
@@ -1,5 +1,5 @@
 {
-  "_comment": "ePuck Simulation Configuration v1.0",
+  "_comment": "ePuck Simulation Configuration v1.5.0",
   "_note": "All files should load this config for consistency",
   
   "world": {
@@ -8,7 +8,21 @@
     "plane_urdf": "plane.urdf",
     "gravity": -9.81,
     "timestep": 0.00416667,
-    "realtime_simulation": false
+    "realtime_simulation": false,
+    
+    "obstacles": {
+      "cylinders": {
+        "enabled": true,
+        "count": 5,
+        "radius": 0.015,
+        "height": 0.04,
+        "color": [0.0, 0.3, 0.7, 1.0],
+        "mass": 0.02,
+        "spawn_margin": 0.25,
+        "min_separation": 0.2,
+        "random_seed": null
+      }
+    }
   },
   
   "robot": {
